--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <!-- Room 3-->
                 <div class="closetbanner">
                     <!-- closet 1-->
-                    <a href="medalbanner.html"><img src="Images/closetbanner2.png" alt="Banner"></a>
+                    <a href="medalbanner.html"><img src="images/closetbanner2.png" alt="Banner"></a>
                 </div>
 
                 <div class="closet2">
